src/objects/Actual_Revenue__c.object
<CustomObject>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_Ran__c</fullName>
        <label>Date Ran</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue__c</fullName>
        <label>Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Revenue__c</fullName>
        <label>Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_Sold__c</fullName>
        <label>Number Sold</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpportunityId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Actual Revenue</relationshipLabel>
        <relationshipName>Actual_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Actual Revenue</label>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>Actual Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Revenue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>